fix: modify colors to achieve better contrast in pagination and hamburger button components

--- a/src/components/HamburgerButton/HamburgerButton.styles.scss
+++ b/src/components/HamburgerButton/HamburgerButton.styles.scss
@@ -13,7 +13,7 @@
   width: var(--button-size);
   height: var(--button-size);
   border-radius: calc(var(--button-size) * 0.15);
-  background-color: var(--clr-main);
+  background-color: var(--clr-medium-blue);
   cursor: pointer;
 
   &.not-first-render {
