--- a/src/components/Pagination/Pagination.styles.scss
+++ b/src/components/Pagination/Pagination.styles.scss
@@ -4,5 +4,5 @@
   align-items: center;
   gap: 0.5rem;
 
-  padding: 1rem 0 3rem;
+  padding: 2rem 0;
 }
