--- a/src/components/PaginationButton/PaginationButton.styles.scss
+++ b/src/components/PaginationButton/PaginationButton.styles.scss
@@ -7,8 +7,8 @@
 
   width: 2rem;
   height: 2rem;
-  background-color: var(--clr-semidark-blue);
-  color: var(--clr-soft-shadow);
+  background-color: var(--clr-darkish-purple);
+  color: var(--clr-gold);
   border-radius: 50%;
   overflow: hidden;
   cursor: pointer;
@@ -26,7 +26,7 @@
 
     width: 150%;
     height: 100%;
-    background-color: var(--clr-aux);
+    background-color: var(--clr-secondary);
     border-radius: 0.25rem;
 
     transform: translateY(0);
