--- a/src/styles/globals/_colors.scss
+++ b/src/styles/globals/_colors.scss
@@ -4,11 +4,13 @@
   --clr-semidark-blue: #587385;
   --clr-bright-blue: #4d7691;
   --clr-accent: #97bacf;
-  --clr-aux: #67669c;
+  --clr-aux: #7575a7;
   --clr-secondary-rgb: 70 69 119;
   --clr-secondary: #464577;
   --clr-medium-blue: #cfdae4;
+  --clr-darkish-purple: #815c7f;
   --clr-dark-shadow: #c4c6c8;
   --clr-soft-shadow: #feffff;
   --clr-dark-gray: #787a7a;
+  --clr-gold: #fdedb2;
 }
